--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,12 @@
 spring.application.name=reserva-baile
-# Configuracion de conexion a MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/reserva_baile?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 
+# Configuración de conexión a MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/reserva_baile?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=tu_password
-
-# para que use el dialecto de MySQL
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-
-
-# Dialecto y DDL Auto
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# para que actualice la base de datos
-#spring.jpa.hibernate.ddl-auto=update
-
-# para que se elimine la base de datos cada vez que se inicia el proyecto
-spring.jpa.hibernate.ddl-auto=create-drop
-
-# para que no se actualice la base de datos
-#spring.jpa.hibernate.ddl-auto=none
+# Ejecución de los scripts de inicialización y limpieza
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
+spring.sql.init.continue-on-error=true
