--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.sql.init.schema-locations=classpath:schema.sql
 spring.sql.init.continue-on-error=true
 
 
-springdoc.api-docs.version=1.0
+springdoc.api-docs.version=OPENAPI_3_0
 springdoc.api-docs.title=API de Reservación de Espacios de Baile y Clases
 springdoc.api-docs.description=Esta API permite gestionar usuarios, clases de baile, estudios y reservas para un sistema de reservación de espacios de baile.
 springdoc.api-docs.contact.name=Fer
