agrego configuracion para swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,12 @@ springdoc.api-docs.title=API de Reservación de Espacios de Baile y Clases
 springdoc.api-docs.description=Esta API permite gestionar usuarios, clases de baile, estudios y reservas para un sistema de reservación de espacios de baile.
 springdoc.api-docs.contact.name=Fer
 springdoc.api-docs.contact.email=correo@example.com
+
+# Configuración de Swagger
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.doc-expansion=none
+springdoc.swagger-ui.display-request-duration=true
+springdoc.swagger-ui.groups-order=desc
+springdoc.swagger-ui.default-models-expand-depth=0
